{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "e195f81f-924c-47b2-9053-71d1d86d8307",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "df8c137c-3c98-4109-b401-6e7c6c6e7c3a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf5534d2-1105-46fa-a912-468fa8acf9c4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}